--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="sevenlions.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Luis Vidal Jacobo - Biochemistry B.S.</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Luis Vidal Jacobo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/LuisVidalJacobo.JPG" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Luis Vidal Jacobo
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Biochemistry B.S 🔬</div>
+        <p class="lead mb-4">I was born and raised in San Diego, California (though not in wealthy areas). Both my parents escaped severe poverty in Mexico and moved to the United States so that I would not have to worry about this. And even if poverty here is not as bad as in Mexico, I was still surrounded by gangs, violence, drugs, and poverty. In spite of not speaking English and not having family, both my parents went out to find a job in order to put food on the table and a roof over my head. This inspired me at a young age to decide that I, too, would make my own sacrifices for my family. My three hour commute throughout middle and high school was the foundation for the rest of my education. I can proudly say that I am the first person in my entire family and the first person in my known family history to attend university.  <br><br>
 
-        Enter bio here<br><br>
+        It’s a constant uphill battle as a first-generation, low-income student. My love for science in high school led me to pursue a degree in STEM: Biology. Entering college was a huge step for me and my family. I remember not being allowed to attend a UCR tour by my high school because I was told I would never even be able to attend university. And here I am defeating the odds. But I came into college not knowing what to expect. I immediately fell in love with my chemistry classes and found it astounding how life could be described at the molecular level. At the end of my first year, I applied for the SALSA Summer Research Scholars program in order to get my first real taste in research science. After being accepted, I completed a project on the LOF1 gene in Arabidopsis thaliana using a CRISPR/Cas9 complex that I constructed with the help of my graduate student mentor. <br><br>
 
-        Enter bio here
+        This research not only further deepened my interest in science, but it made me realize I was in the completely wrong major. I made the decision to pursue a bachelors in Biochemistry to further strengthen my knowledge in human proteopathies. I made the transition into Dr. Grover’s Bioengineering lab in March 2019 in order to find more translational research to the medical field. Here I am working on developing a low-cost method for identifying counterfeit medication. I am using the ImageJ software to develop chronoprints which can document changes in substance’s viscosity. Concurrently I am improving the efficiency of a thermoelectric cooler in order to replace liquid nitrogen in these trials making the techniques developed by the lab more accessible. I not only love the research that I am doing, but I now know what I want to do in the future. I have decided to pursue an MD/PhD where I will be given creative freedom to develop new drugs and form part of a team of physicians to run clinical trials. Entering college was only one of the first obstacles I will face. Less than one percent of physicians in the US are Latinos; but the motivation and strength that I get from my family will allow me to get to where I want to be.
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/lvidal2299">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/dotorBetito">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:thesame234@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +92,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Research Trainee</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://groverlab.org/">Dr. Grover's Bioengineering Lab</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Use ImageJ to produce chronoprints of counterfeit medication<br> 
+              • Improve efficiency of thermoelectric cooler<br>
+              • Experience with SolidWorks and ImageJ<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,33 +107,33 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">SALSA Summer Research Scholar</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://iigb.ucr.edu/springer/">Dr. Springer's Botany Department</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Constructed CRISPR/Cas9 Complex knockout LOF1 in Arabidopsis thaliana<br>
+              • Analyzed efficiency through High resolution melt analysis<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2018 - March 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Cashier</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.facebook.com/YogurtlandRiversideCampus/">Yogurtland Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Completed transaction and was responsible for opening/closing tills<br>
+            • Ensured products were up to manager standards<br>
+            • Maintained a clean lobby<br>
+            • Greeted customers and offered new flavors<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">October 2019 - Present</span>
           </div>
         </div>
 
@@ -152,35 +152,14 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Science</div>
+            <div>B.S. in Biochemistry with Medical Science concentration</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2017 - June 2021</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -191,7 +170,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/CRISPRCas9.png" width="500px">
+            <img src="img/MutantPCR.png" width="500px"> <br><br>
+            <img src="img/SBPGraduation.jpg" width="500px">
+            <img src="img/BlueLeaf.png" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +181,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Luis Vidal Jacobo</center><br>
 
 
   </div>
